add in website orgnation add

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
 
   <!-- Structured Data (JSON-LD) -->
-  <script type="application/ld+json">
+  
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@graph": [
@@ -126,11 +127,22 @@
       "isPartOf": { "@id": "https://swastikdharpure.github.io/Portfolio/#website" },
       "about": { "@id": "https://swastikdharpure.github.io/Portfolio/#person" },
       "description": "Official portfolio website of Swastik Dharpure, .NET Developer & Freelancer from Nagpur, India."
+    },
+    {
+      "@type": "Organization",
+      "name": "Swastik Dharpure",
+      "url": "https://swastikdharpure.github.io/Portfolio/",
+      "logo": "https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg",
+      "sameAs": [
+        "https://www.linkedin.com/in/swastikdharpure",
+        "https://github.com/swastikdharpure"
+      ]
     }
   ]
 }
 </script>
 
+<!-- Structured Data (JSON-LD) end-->
 
 
   <!-- --G-console-- -->
