add in website Seo

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
   <meta property="og:image:height" content="630" />
 
 
-
-  <!-- Structured Data (JSON-LD) -->
-  
+<!-- Structured Data (JSON-LD) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -69,8 +67,8 @@
       "@type": "Person",
       "@id": "https://swastikdharpure.github.io/Portfolio/#person",
       "name": "Swastik Dharpure",
-      "jobTitle": ".NET Developer",
-      "description": "Swastik Dharpure is a .NET Developer and Freelancer based in Nagpur, India with expertise in ASP.NET MVC, SQL Server, API Development, and scalable web applications.",
+      "jobTitle": ".NET Developer & Freelancer",
+      "description": "Swastik Dharpure is a .NET Developer and Freelancer based in Nagpur, India with expertise in ASP.NET MVC, SQL Server, API Development, React.js, and scalable web applications. Available for freelance and remote projects globally.",
       "image": "https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg",
       "url": "https://swastikdharpure.github.io/Portfolio/",
       "sameAs": [
@@ -92,17 +90,173 @@
         "contactType": "Freelance Work",
         "email": "swastikdharpure@gmail.com",
         "telephone": "+91-9689163020",
-        "areaServed": "IN",
-        "availableLanguage": ["English", "Hindi", "Marathi"]
+        "areaServed": ["IN","Global"],
+        "availableLanguage": ["English", "Hindi", "Marathi"],
+        "availability": "Remote projects accepted"
       },
-      "knowsAbout": [
+      "skills": [
         "ASP.NET MVC",
         "C#",
         "SQL Server",
         "Entity Framework",
         "API Development",
+        "React.js",
         "Freelance Web Development"
-      ]
+      ],
+      "award": [
+        "Best .NET Developer Award - ITCRAFT 2024"
+      ],
+      "hasCredential": [
+        {
+          "@type": "EducationalOccupationalCredential",
+          "name": "Microsoft Certified: Azure Fundamentals",
+          "credentialCategory": "Professional Certification",
+          "issuer": {
+            "@type": "Organization",
+            "name": "Microsoft"
+          }
+        }
+      ],
+      "jobLocation": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Nagpur",
+          "addressRegion": "Maharashtra",
+          "addressCountry": "India"
+        }
+      },
+      "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "ASP.NET MVC Web Development",
+            "description": "Custom web applications using ASP.NET MVC and C# for global clients."
+          },
+          "priceSpecification": [
+            {
+              "@type": "PriceSpecification",
+              "price": "500-1500",
+              "priceCurrency": "USD",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["Global"]
+            },
+            {
+              "@type": "PriceSpecification",
+              "price": "45000-135000",
+              "priceCurrency": "INR",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["IN"]
+            }
+          ],
+          "url": "https://swastikdharpure.github.io/Portfolio/#contact"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "API Development",
+            "description": "RESTful API development and integration for global clients."
+          },
+          "priceSpecification": [
+            {
+              "@type": "PriceSpecification",
+              "price": "400-1200",
+              "priceCurrency": "USD",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["Global"]
+            },
+            {
+              "@type": "PriceSpecification",
+              "price": "36000-108000",
+              "priceCurrency": "INR",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["IN"]
+            }
+          ],
+          "url": "https://swastikdharpure.github.io/Portfolio/#contact"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "SQL Server Database Solutions",
+            "description": "Database design, optimization, and queries for global clients."
+          },
+          "priceSpecification": [
+            {
+              "@type": "PriceSpecification",
+              "price": "350-1000",
+              "priceCurrency": "USD",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["Global"]
+            },
+            {
+              "@type": "PriceSpecification",
+              "price": "31500-90000",
+              "priceCurrency": "INR",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["IN"]
+            }
+          ],
+          "url": "https://swastikdharpure.github.io/Portfolio/#contact"
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "React.js Frontend Development",
+            "description": "Modern responsive frontend development using React.js for global clients."
+          },
+          "priceSpecification": [
+            {
+              "@type": "PriceSpecification",
+              "price": "450-1200",
+              "priceCurrency": "USD",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["Global"]
+            },
+            {
+              "@type": "PriceSpecification",
+              "price": "40500-108000",
+              "priceCurrency": "INR",
+              "availability": "https://schema.org/InStock",
+              "areaServed": ["IN"]
+            }
+          ],
+          "url": "https://swastikdharpure.github.io/Portfolio/#contact"
+        }
+      ],
+      "hasPart": [
+        {
+          "@type": "CreativeWork",
+          "name": "Thane Metro Rail Website",
+          "url": "https://thanemetrorail.com/",
+          "description": "Developed a complete ASP.NET MVC website with API integration for Metro Rail Thane project."
+        },
+        {
+          "@type": "CreativeWork",
+          "name": "E-learning and NGO Platform",
+          "url": "https://littera.in/",
+          "description": "Built an ASP.NET MVC web application with SQL Server backend and REST API integration."
+        }
+      ],
+      "review": [
+        {
+          "@type": "Review",
+          "author": "Client Name",
+          "datePublished": "2025-09-01",
+          "reviewBody": "Swastik delivered high-quality ASP.NET projects on time.",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          }
+        }
+      ],
+      "knowsLanguage": ["English", "Hindi", "Marathi"],
+      "keywords": "Freelance, ASP.NET MVC, C#, SQL Server, Remote Developer, React.js, Web Development, API Integration"
     },
     {
       "@type": "WebSite",
@@ -110,9 +264,7 @@
       "name": "Swastik Dharpure Portfolio",
       "url": "https://swastikdharpure.github.io/Portfolio/",
       "description": "Portfolio of Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India with expertise in ASP.NET MVC, SQL Server, APIs, and scalable web applications.",
-      "publisher": {
-        "@id": "https://swastikdharpure.github.io/Portfolio/#person"
-      },
+      "publisher": { "@id": "https://swastikdharpure.github.io/Portfolio/#person" },
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://swastikdharpure.github.io/Portfolio/?q={search_term_string}",
@@ -141,8 +293,8 @@
   ]
 }
 </script>
+<!-- Structured Data (JSON-LD) end -->
 
-<!-- Structured Data (JSON-LD) end-->
 
 
   <!-- --G-console-- -->
