add in website seperated seo

--- a/Mahagenco.html
+++ b/Mahagenco.html
@@ -4,44 +4,50 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <title>Swastik Dharpure | .NET Developer & Freelancer | Nagpur, India</title>
+  
+  <!-- 🎯 CLIENT-ATTRACTING META TAGS -->
+  <title>Mahagenco Website Case Study | Hire .NET Developer | Swastik Dharpure</title>
   <meta name="description"
-    content="Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India. Specialized in ASP.NET MVC, SQL Server, C#, APIs, and scalable web applications. Hire me for freelance or remote projects.">
+    content="See how I developed Mahagenco's official website using ASP.NET MVC & SQL Server. Government project expert available for your enterprise web development. View portfolio & get quote.">
 
   <meta name="keywords"
-    content=".NET Developer Nagpur, Freelancer Developer India, ASP.NET MVC, C#, SQL Server, API Developer, Remote Web Development, Swastik Dharpure">
+    content="mahagenco developer, asp.net mvc developer for hire, government website developer, .net freelancer, enterprise web development, sql server developer, hire .net programmer">
+  
   <meta name="author" content="Swastik Dharpure">
   <meta name="robots" content="index, follow">
   <meta name="language" content="English">
   <meta name="google" content="notranslate">
-  <!-- Basic Meta Tags -->
-  <!-- Canonical -->
-  <link rel="canonical" href="https://swastikdharpure.github.io/Portfolio/">
-  <!-- Theme Color -->
+  
+  <!-- 🎯 PROJECT-SPECIFIC CANONICAL -->
+  <link rel="canonical" href="https://swastikdharpure.github.io/Portfolio/Mahagenco.html">
+  
   <meta name="theme-color" content="#0d6efd">
 
-  <!-- Open Graph (For Facebook, LinkedIn, etc.) -->
-
-
-  <meta property="og:title" content="Swastik Dharpure - .NET Developer & Freelancer in Nagpur, India">
+  <!-- 🎯 PROJECT-FOCUSED OPEN GRAPH -->
+  <meta property="og:title" content="Mahagenco Case Study - ASP.NET MVC Developer | Swastik Dharpure">
   <meta property="og:description"
-    content="Portfolio of Swastik Dharpure, showcasing expertise in ASP.NET MVC, SQL Server, C#, APIs, and scalable web applications. Open for freelance and remote opportunities.">
-  <meta property="og:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg">
-  <meta property="og:url" content="https://swastikdharpure.github.io/Portfolio/">
-  <meta property="og:type" content="website">
+    content="Official Mahagenco website development with multilingual support. Government project expertise. Available for similar enterprise projects.">
+  <meta property="og:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/portfolio/Mahagenco.jpg">
+  <meta property="og:url" content="https://swastikdharpure.github.io/Portfolio/Mahagenco.html">
+  <meta property="og:type" content="article">
   <meta property="og:site_name" content="Swastik Dharpure Portfolio">
-  <meta property="og:image:alt" content="Swastik Dharpure - .NET Developer & Freelancer Portfolio">
-  <meta name="twitter:image:alt" content="Swastik Dharpure Portfolio Image">
+  <meta property="og:image:alt" content="Mahagenco Website Development - ASP.NET MVC Project">
+  <meta name="twitter:image:alt" content="Mahagenco Project by Swastik Dharpure">
 
-
-  <!-- Twitter Card -->
+  <!-- 🎯 PROJECT-SPECIFIC TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Swastik Dharpure - .NET Developer & Freelancer">
+  <meta name="twitter:title" content="Mahagenco Website Development | .NET Developer Portfolio">
   <meta name="twitter:description"
-    content="Explore the portfolio of Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India. Available for freelance and remote projects.">
-  <meta name="twitter:image" content="https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg">
+    content="ASP.NET MVC development for Mahagenco official website. View case study and hire for similar projects.">
 
-  <!-- for ngp geo location -->
+  <!-- 🎯 CLIENT-ATTRACTING META TAGS -->
+  <meta name="availability" content="Available for new projects">
+  <meta name="freelance" content="Available">
+  <meta name="remote" content="Yes">
+  <meta name="service-type" content="ASP.NET MVC Development">
+  <meta name="project-type" content="Enterprise Websites">
+
+  <!-- Geo location -->
   <meta name="geo.region" content="IN-MH">
   <meta name="geo.placename" content="Nagpur">
   <meta name="geo.position" content="21.1458;79.0882">
@@ -53,151 +59,89 @@
   <meta property="og:locale" content="en_IN">
   <meta property="og:locale:alternate" content="en_US">
 
-
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-
-
-  <!-- Structured Data (JSON-LD) -->
+  <!-- 🎯 PROJECT-SPECIFIC STRUCTURED DATA -->
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@graph": [
     {
-      "@type": "Person",
-      "@id": "https://swastikdharpure.github.io/Portfolio/#person",
-      "name": "Swastik Dharpure",
-      "jobTitle": ".NET Developer",
-      "description": "Swastik Dharpure is a .NET Developer and Freelancer based in Nagpur, India with expertise in ASP.NET MVC, SQL Server, API Development, and scalable web applications.",
-      "image": "https://swastikdharpure.github.io/Portfolio/assets/img/my-profile-img.jpg",
-      "url": "https://swastikdharpure.github.io/Portfolio/",
-      "sameAs": [
-        "https://www.linkedin.com/in/swastikdharpure",
-        "https://github.com/swastikdharpure"
-      ],
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "Nagpur",
-        "addressRegion": "Maharashtra",
-        "addressCountry": "India"
+      "@type": "Article",
+      "headline": "Mahagenco Website Development Case Study",
+      "description": "Official Mahagenco website development using ASP.NET MVC with multilingual support and SEO optimization",
+      "author": {
+        "@type": "Person",
+        "name": "Swastik Dharpure",
+        "jobTitle": ".NET Developer & Freelancer",
+        "url": "https://swastikdharpure.github.io/Portfolio/"
       },
-      "alumniOf": {
-        "@type": "CollegeOrUniversity",
-        "name": "Rashtrasant Tukadoji Maharaj Nagpur University"
-      },
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "contactType": "Freelance Work",
-        "email": "swastikdharpure@gmail.com",
-        "telephone": "+91-9689163020",
-        "areaServed": "IN",
-        "availableLanguage": ["English", "Hindi", "Marathi"]
-      },
-      "knowsAbout": [
-        "ASP.NET MVC",
-        "C#",
-        "SQL Server",
-        "Entity Framework",
-        "API Development",
-        "Freelance Web Development"
-      ]
-    },
-    {
-      "@type": "WebSite",
-      "@id": "https://swastikdharpure.github.io/Portfolio/#website",
-      "name": "Swastik Dharpure Portfolio",
-      "url": "https://swastikdharpure.github.io/Portfolio/",
-      "description": "Portfolio of Swastik Dharpure, a .NET Developer & Freelancer from Nagpur, India with expertise in ASP.NET MVC, SQL Server, APIs, and scalable web applications.",
       "publisher": {
-        "@id": "https://swastikdharpure.github.io/Portfolio/#person"
+        "@type": "Person",
+        "name": "Swastik Dharpure"
       },
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "https://swastikdharpure.github.io/Portfolio/?q={search_term_string}",
-        "query-input": "required name=search_term_string"
+      "datePublished": "2023-01-15",
+      "image": "https://swastikdharpure.github.io/Portfolio/assets/img/portfolio/Mahagenco.jpg",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://swastikdharpure.github.io/Portfolio/Mahagenco.html"
       }
     },
     {
       "@type": "WebPage",
-      "@id": "https://swastikdharpure.github.io/Portfolio/#webpage",
-      "url": "https://swastikdharpure.github.io/Portfolio/",
-      "name": "Swastik Dharpure Portfolio",
-      "isPartOf": { "@id": "https://swastikdharpure.github.io/Portfolio/#website" },
-      "about": { "@id": "https://swastikdharpure.github.io/Portfolio/#person" },
-      "description": "Official portfolio website of Swastik Dharpure, .NET Developer & Freelancer from Nagpur, India."
+      "name": "Mahagenco Project - ASP.NET MVC Development",
+      "description": "Case study of Mahagenco official website development using ASP.NET MVC, SQL Server with multilingual support",
+      "url": "https://swastikdharpure.github.io/Portfolio/Mahagenco.html",
+      "mainEntity": {
+        "@type": "Article",
+        "headline": "Mahagenco Website Development"
+      }
     }
   ]
 }
 </script>
 
-
-
-  <!-- --G-console-- -->
+  <!-- Google Analytics & GTM (Same as before) -->
   <meta name="google-site-verification" content="OeFfSMNIefoP4WvS9Za9cgVVrfRUZhzKCUyCynr-FO8" />
-  <!-- <meta name="google-site-verification" content="bU2eSkwuXdp5xP34fSxvMIWo2xBIZOZbGbfoxzF7bO4" /> -->
-
-  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TYF45CRV4N"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-TYF45CRV4N');
   </script>
 
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-5WPSBVKB');</script>
-  <!-- End Google Tag Manager -->
-  <!-- --G-console--end -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-5WPSBVKB');</script>
 
-  <!-- Favicon -->
+  <!-- Favicon & CSS (Same as before) -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
   <link rel="manifest" href="assets/img/favicon/site.webmanifest">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="apple-mobile-web-app-title" content="Swastik" />
-  <link rel="mask-icon" href="assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-
-  <meta name="msapplication-TileColor" content="#2b5797">
 
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="dns-prefetch" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <!-- Favicon end---- -->
   <link rel="me" href="https://www.linkedin.com/in/swastikdharpure">
   <link rel="me" href="https://github.com/swastikdharpure">
 
-  <!-- Fonts -->
+  <!-- Fonts & CSS -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
