--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p><a href="+91-9689163020">+91 9689163020</a></p>
+                  <p><a href="tel:+919689163020">+91 9689163020</a></p>
                 </div>
               </div><!-- End Info Item -->
 
