add in website all 50 kb compress image

--- a/ThaneMetro.html
+++ b/ThaneMetro.html
@@ -301,7 +301,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/ThaneMetro.png" loading="lazy" alt="Thane Metro">
+                  <img src="assets/img/portfolio/ThaneMetro.jpeg" loading="lazy" alt="Thane Metro">
                 </div>
 
                 <div class="swiper-slide">
