--- a/index.html
+++ b/index.html
@@ -850,12 +850,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/NagpurMetro.png" class="img-fluid" loading="lazy" alt="Nagpur Metro">
+                <img src="assets/img/portfolio/NagpurMetro.jpeg" class="img-fluid" loading="lazy" alt="Nagpur Metro">
                 <div class="portfolio-info">
                   <h4>Nagpur Metro Official Website</h4>
                  <p>Maintaining and developing the Nagpur Metro website using ASP.NET Web form & SQL Server.</p>
 
-                  <a href="assets/img/portfolio/NagpurMetro.png" title="Nagpur Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/NagpurMetro.jpeg" title="Nagpur Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="NagpurMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -888,11 +888,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/PuneMetro.png" class="img-fluid" loading="lazy" alt="Pune Metro">
+                <img src="assets/img/portfolio/PuneMetro.jpeg" class="img-fluid" loading="lazy" alt="Pune Metro">
                 <div class="portfolio-info">
                   <h4>Pune Metro Official Website</h4>
                   <p>Maintaining and developing the Pune Metro website using ASP.NET Web form & SQL Server.</p>
-                  <a href="assets/img/portfolio/PuneMetro.png" title="Pune Metro" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/PuneMetro.jpeg" title="Pune Metro" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="PuneMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -925,11 +925,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ThaneMetro.png" class="img-fluid" loading="lazy" alt=" Thane Metro">
+                <img src="assets/img/portfolio/ThaneMetro.jpeg" class="img-fluid" loading="lazy" alt=" Thane Metro">
                 <div class="portfolio-info">
                   <h4>Thane Metro Official Website</h4>
                   <p>Maintaining and developing the ThaneMetro website using ASP.NET MVC5 & SQL Server.</p>
-                  <a href="assets/img/portfolio/ThaneMetro.png" title="Thane Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/ThaneMetro.jpeg" title="Thane Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="ThaneMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -937,11 +937,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/MahaMetro.png" class="img-fluid" loading="lazy" alt="Maha Metro">
+                <img src="assets/img/portfolio/MahaMetro.jpeg" class="img-fluid" loading="lazy" alt="Maha Metro">
                 <div class="portfolio-info">
                   <h4>Maha Metro Official Website</h4>
                   <p>Maintaining and developing the MahaMetro website using ASP.NET MVC5 & SQL Server.</p>
-                  <a href="assets/img/portfolio/MahaMetro.png" title="Maha Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/MahaMetro.jpeg" title="Maha Metro Website" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="MahaMetro.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
