--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -133,19 +133,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/NagpurMetro.png" alt="">
+                  <img src="assets/img/portfolio/NagpurMetro.jpeg" alt="Nagpur Metro">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/PuneMetro.png" alt="">
+                  <img src="assets/img/portfolio/PuneMetro.jpeg" alt="Pune Metro">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/ThaneMetro.png" alt="">
+                  <img src="assets/img/portfolio/ThaneMetro.jpeg" alt="Thane Metro">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/MahaMetro.png" alt="">
+                  <img src="assets/img/portfolio/MahaMetro.jpeg" alt="Maha Metro">
                 </div>
 
               </div>
