--- a/NagpurMetro.html
+++ b/NagpurMetro.html
@@ -301,7 +301,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/NagpurMetro.png" loading="lazy" alt="Nagpur Metro">
+                  <img src="assets/img/portfolio/NagpurMetro.jpeg" loading="lazy" alt="Nagpur Metro">
                 </div>
 
                 <div class="swiper-slide">
